Revision history for App-Pocoirc

{{$NEXT}}

0.46  Sat Jul 30 00:12:21 GMT 2011
    - Show the server hostname in the "Connecting to IRC" status message
    - Strip the unhelpful "at FOO line BAR" suffix from eval errors in the
      console UI
    - Test isa() after creating components and plugins
    - Fix issues with --interactive

0.45  Wed May 25 06:30:38 GMT 2011
    - Replaced the IO wrapping code in ReadLine.pm with IO::WrapOutput
    - Depend on Term::Cap and Term::ReadKey, which are needed by
      POE::Wheel::ReadLine

0.44  Sun May 22 16:12:13 GMT 2011
    - Don't hang under --interactive if an exception is raised on startup

0.43  Thu May 19 15:40:10 GMT 2011
    - Fix the interactive help message, it implied that commas weren't
      needed in lists
    - ReadLine.pm: Only restore stdio when we have been unregistered from
      all IRC components
    - The network name in the ReadLine UI wasn't getting updated when
      running without a configuration file

0.42  Thu Apr 28 22:45:16 GMT 2011
    - Fix the same exec() problem as in the previous release, this time under
      --daemonize, because we were closing STDOUT/STDERR before redirecting
      them, which is not good.

0.41  Thu Apr 28 21:32:16 GMT 2011
    - Log it if we fail to log in due to a bad nickname
    - Decode any IRC strings before printing them under --trace
    - Enabling 'verbose' in --interactive after startup wasn't working
    - Fix output encoding in a few spots
    - POE::Wheel::Run with an exec()'d child was failing under --interactive

0.40  Wed Apr 27 05:50:35 GMT 2011
    - Oops. Didn't avoid custom stringification everywhere. Fixed.
    - Allow command-line option bundling, e.g. -itv instead of -i -t -v

0.39  Wed Apr 27 03:32:46 GMT 2011
    - Fix missing name for numeric 001 under --trace. Also depend on
      IRC::Utils 0.07 for even more numeric names.
    - Avoid custom stringifications when dumping objects with --trace

0.38  Tue Apr 26 22:03:37 GMT 2011