@@ -15,7 +15,7 @@ no_AutoPrereq      = 1
 
 [Prereqs / Runtime]
 perl                        = 5.008
-Class::Load                 = 0.06
+Class::Load                 = 0.20
 Data::Dump                  = 0
 IRC::Utils                  = 0.07
 IO::WrapOutput              = 0.02
